cluster-setup/ymls/operator.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    config.couchbase.com/version: 2.7.0
  creationTimestamp: null
  name: couchbase-operator
spec:
  replicas: 1
  selector:
    matchLabels:
      app: couchbase-operator
  strategy: {}
  template:
    metadata:
      annotations:
        prometheus.io/path: /metrics
        prometheus.io/port: "8383"
        prometheus.io/scheme: http
        prometheus.io/scrape: "true"
      creationTimestamp: null
      labels:
        app: couchbase-operator
    spec:
      containers:
      - args:
        - --pod-create-timeout=10m0s
        - --pod-delete-delay=0s
        - --pod-readiness-delay=10s
        - --pod-readiness-period=20s
        - --zap-log-level=info
        command:
        - couchbase-operator
        image: couchbase/operator:2.7.0
        imagePullPolicy: IfNotPresent
        name: couchbase-operator
        ports:
        - containerPort: 8080
          name: http-pprof
        - containerPort: 8383
          name: prom-metrics
        readinessProbe:
          httpGet:
            path: /readyz
            port: http-pprof
            scheme: HTTP
        resources: {}
      - name: ubuntu-sidecar
        image: ubuntu:latest
        command: ["/bin/bash", "-c", "--"]
        args: ["while true; do sleep 30; done;"]
        ports:
        - containerPort: 3000
          name: cod
        resources: {}
        volumeMounts:
        - name: logs-volume
          mountPath: /mnt/logs
        - name: development
          mountPath: /mnt/development
      # - name: prometheus-sidecar
      #   image: prom/prometheus:latest
      #   ports:
      #   - containerPort: 9090
      #     name: prometheus
      #   # volumeMounts:
      #   # - name: prometheus-config
      #   #   mountPath: /etc/prometheus
      #   resources: {}
      # - name: grafana-sidecar
      #   image: grafana/grafana:latest
      #   ports:
      #   - containerPort: 3000
      #     name: grafana
      #   env:
      #   - name: GF_SECURITY_ADMIN_PASSWORD
      #     value: admin
      #   - name: GF_SECURITY_ADMIN_USER
      #     value: admin
      #   volumeMounts:
      #   - name: grafana-storage
      #     mountPath: /var/lib/grafana
      #   resources: {}
      securityContext:
        runAsNonRoot: false
      serviceAccountName: couchbase-operator
      volumes:
      - name: logs-volume
        hostPath:
          path: /var/log/pods
          type: Directory
      - name: development
        hostPath:
          path: /mnt/development
          type: Directory
      # - name: prometheus-config
      #   configMap:
      #     name: prometheus-config
      # - name: grafana-storage
      #   emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    config.couchbase.com/version: 2.7.0
  creationTimestamp: null
  name: couchbase-operator
spec:
  ports:
  - name: http-pprof
    port: 8080
    protocol: TCP
    targetPort: 8080
  - name: cod
    port: 3000
    protocol: TCP
  - name: http-prometheus-metrics
    port: 8383
    protocol: TCP
    targetPort: 8383
  # - name: http-prometheus-events
  #   port: 8384
  #   protocol: TCP
  #   targetPort: 8384
  # - name: grafana
  #   port: 3000
  #   protocol: TCP
  #   targetPort: 3000
  selector:
    app: couchbase-operator
