cluster-setup/ymls/admission.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    config.couchbase.com/version: 2.7.0
  creationTimestamp: null
  name: couchbase-operator-admission
spec:
  replicas: 1
  selector:
    matchLabels:
      app: couchbase-operator-admission
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: couchbase-operator-admission
    spec:
      containers:
      - args:
        - -zap-log-level=info
        - -tls-cert-file=/var/run/secrets/couchbase.com/couchbase-operator-admission/tls.crt
        - -tls-private-key-file=/var/run/secrets/couchbase.com/couchbase-operator-admission/tls.key
        - -validate-secrets=true
        - -validate-storage-classes=true
        command:
        - couchbase-admission-controller
        image: couchbase/admission-controller:2.7.0
        imagePullPolicy: IfNotPresent
        name: couchbase-operator-admission
        ports:
        - containerPort: 8443
          name: https
        readinessProbe:
          httpGet:
            path: /readyz
            port: https
            scheme: HTTPS
        resources: {}
        volumeMounts:
        - mountPath: /var/run/secrets/couchbase.com/couchbase-operator-admission
          name: couchbase-operator-admission
          readOnly: true
      securityContext:
        runAsNonRoot: true
      serviceAccountName: couchbase-operator-admission
      volumes:
      - name: couchbase-operator-admission
        secret:
          secretName: couchbase-operator-admission
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    config.couchbase.com/version: 2.7.0
  creationTimestamp: null
  name: couchbase-operator-admission
spec:
  ports:
  - port: 443
    protocol: TCP
    targetPort: 8443
  selector:
    app: couchbase-operator-admission
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  annotations:
    config.couchbase.com/version: 2.7.0
  creationTimestamp: null
  name: couchbase-operator-admission
webhooks:
- admissionReviewVersions:
  - v1
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURJRENDQWdpZ0F3SUJBZ0lRSy9hQkR2UURFc0ZpSytjcElkdDFVakFOQmdrcWhraUc5dzBCQVFzRkFEQXEKTVNnd0pnWURWUVFERXg5amIzVmphR0poYzJVdGIzQmxjbUYwYjNJdFlXUnRhWE56YVc5dUlFTkJNQjRYRFRJMQpNREl3TlRBNE5UUXpPRm9YRFRNMU1ESXdNekE0TlRRek9Gb3dLakVvTUNZR0ExVUVBeE1mWTI5MVkyaGlZWE5sCkxXOXdaWEpoZEc5eUxXRmtiV2x6YzJsdmJpQkRRVENDQVNJd0RRWUpLb1pJaHZjTkFRRUJCUUFEZ2dFUEFEQ0MKQVFvQ2dnRUJBTlhqMDI4TDN5WkRiTGxwSFRKTWdiYkpKSnRSOUcveWM5NGlaKzNqMFVGbE1ZbGVlZUdyaUFWRwo4ZC8ySEhHV3BBNn [...]
    service:
      name: couchbase-operator-admission
      namespace: default
      path: /couchbaseclusters/validate
  failurePolicy: Fail
  name: couchbase-operator-admission.default.svc
  rules:
  - apiGroups:
    - couchbase.com
    apiVersions:
    - v1
    - v2
    operations:
    - CREATE
    - UPDATE
    resources:
    - couchbaseclusters
    - couchbasebuckets
    - couchbaseephemeralbuckets
    - couchbasememcachedbuckets
    - couchbasereplications
    - couchbaseusers
    - couchbasegroups
    - couchbaserolebindings
    - couchbasebackups
    - couchbasebackuprestores
    - couchbaseautoscalers
    - couchbasecollections
    - couchbasecollectiongroups
    - couchbasescopes
    - couchbasescopegroups
    - couchbasemigrationreplications
  sideEffects: None
